Added 22_LiveDrawing2 to basic samples

--- a/basic/06_Video/video.cfg
+++ b/basic/06_Video/video.cfg
@@ -13,7 +13,7 @@
         <PARAM name="alpha" type="ALPHA" property="published" interpolation="linear" duration="4000">
             <VAL>
                 <D type="FUNCTION">1</D>
-            </VAL>            
+            </VAL>
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
@@ -21,7 +21,7 @@
                 <D type="FUNCTION" code="GREEN">1.000000</D>
                 <D type="FUNCTION" code="BLUE">1.000000</D>
                 <D type="FUNCTION" code="ALPHA">1.0</D>
-            </VAL>            
+            </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
             <VAL>
@@ -56,9 +56,9 @@
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="volume" type="FUNCTION">
+        <PARAM name="volume" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.07</D>
             </VAL>
         </PARAM>
         <PARAM name="balance" type="FUNCTION">
@@ -97,16 +97,16 @@
         <PARAM name="blending" type="BLENDING" property="published">
             <VAL>
                 <D type="NUM">0</D>
-            </VAL>            
+            </VAL>
         </PARAM>
         <PARAM name="startplaying" type="NUM" property="published" options="OFF,ON">
             <VAL>
                 <D type="NUM">1</D>
-            </VAL>            
+            </VAL>
         </PARAM>
         <PARAM name="loop" type="NUM" property="published">
             <VAL>
-                <D type="NUM">1</D>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
         <PARAM name="showtrackdata" type="NUM" property="published">
@@ -194,8 +194,63 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
+        <PARAM name="no_audio_output" type="NUM">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="no_video_output" type="NUM">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="no_text_output" type="NUM">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
     <PRECONFIGS>
-        
+        <PRE>
+            <P name="script">0</P>
+            <P name="alpha">0</P>
+            <P name="color">0</P>
+            <P name="syncro">0</P>
+            <P name="phase">0</P>
+            <P name="movies">0</P>
+            <P name="sounds">0</P>
+            <P name="position">0</P>
+            <P name="speed">0</P>
+            <P name="volume">0</P>
+            <P name="balance">0</P>
+            <P name="brightness">0</P>
+            <P name="contrast">0</P>
+            <P name="saturation">0</P>
+            <P name="hue">0</P>
+            <P name="moviemode">0</P>
+            <P name="blending">0</P>
+            <P name="startplaying">0</P>
+            <P name="loop">0</P>
+            <P name="showtrackdata">0</P>
+            <P name="interpolation">0</P>
+            <P name="pos_text_x">0</P>
+            <P name="pos_text_y">0</P>
+            <P name="anc_text_x">0</P>
+            <P name="alt_text_y">0</P>
+            <P name="pos_cuad_x">0</P>
+            <P name="pos_cuad_y">0</P>
+            <P name="anc_cuad_x">0</P>
+            <P name="alt_cuad_y">0</P>
+            <P name="showmoviedata">0</P>
+            <P name="display_x">0</P>
+            <P name="display_y">0</P>
+            <P name="display_width">0</P>
+            <P name="display_height">0</P>
+            <P name="guides">0</P>
+            <P name="movielaunch">0</P>
+            <P name="no_audio_output">0</P>
+            <P name="no_video_output">0</P>
+            <P name="no_text_output">0</P>
+        </PRE>
     </PRECONFIGS>
 </MOCONFIG>
