--- a/basic/22_LiveDrawing2/erase.cfg
+++ b/basic/22_LiveDrawing2/erase.cfg
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
-<MOCONFIG majorversion="264649914" minorversion="-2147463552">
-    <DEFINITION name="" class="" />
+<MOCONFIG majorversion="1969497900" minorversion="1769234802">
+    <DEFINITION name="erase" class="moPreEffect" />
     <UPDATE />
     <CONFIGPARAMS>
         <PARAM name="inlet" type="INLET">
@@ -15,29 +15,27 @@
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="hosts" type="TEXT">
+        <PARAM name="alpha" type="ALPHA">
             <VAL>
-                <D type="TXT">127.0.0.1</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="port" type="NUM">
+        <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="INT">3334</D>
+                <D type="FUNCTION" code="RED">0.0</D>
+                <D type="FUNCTION" code="GREEN">0.0</D>
+                <D type="FUNCTION" code="BLUE">0.0</D>
+                <D type="FUNCTION" code="ALPHA">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="receive_events" type="NUM">
+        <PARAM name="syncro" type="SYNC">
             <VAL>
-                <D type="INT">0</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="debug" type="NUM">
+        <PARAM name="phase" type="PHASE">
             <VAL>
-                <D type="INT">0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="process_moldeo_api" type="NUM">
-            <VAL>
-                <D type="INT">1</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
