--- a/basic/22_LiveDrawing2/moldeoapioscin.cfg
+++ b/basic/22_LiveDrawing2/moldeoapioscin.cfg
@@ -18,47 +18,27 @@
         <PARAM name="hosts" type="TEXT">
             <VAL>
                 <D type="TXT">127.0.0.1</D>
-                <D type="INT">3335</D>
+                <D type="INT">3334</D>
             </VAL>
         </PARAM>
         <PARAM name="port" type="NUM">
             <VAL>
-                <D type="INT">3335</D>
+                <D type="INT">3334</D>
             </VAL>
         </PARAM>
-        <PARAM name="devices" type="TEXT">
-            <VAL>
-                <D type="TXT">keyboard</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="latency" type="NUM">
-            <VAL>
-                <D type="FLOAT">30.000000</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="max_events" type="NUM">
-            <VAL>
-                <D type="INT">10</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="send_events" type="NUM">
+        <PARAM name="receive_events" type="NUM">
             <VAL>
                 <D type="INT">0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="delete_events" type="NUM">
-            <VAL>
-                <D type="INT">0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="send_moldeo_api" type="NUM">
-            <VAL>
-                <D type="INT">1</D>
             </VAL>
         </PARAM>
         <PARAM name="debug" type="NUM">
             <VAL>
-                <D type="INT">0</D>
+                <D type="INT">1</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="process_moldeo_api" type="NUM">
+            <VAL>
+                <D type="INT">1</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
